syntax = "proto3";

package payment;


service PaymentService {
    rpc PaymentPreparer (PaymentPrepare) returns (PaymentResponse);
    rpc PaymentCommiter (PaymentCommit) returns (PaymentResponse);
}

message PaymentPrepare {
    string key = 1;
}

message PaymentCommit {
    string key = 1;
}

message PaymentResponse {
    string status = 1;
    string data = 2;
}
